--- a/gradle.properties
+++ b/gradle.properties
@@ -27,6 +27,7 @@ orientDbVersion             = 3.0.30
 pebbleVersion               = 3.1.2
 slf4jVersion                = 1.7.30
 thymeleafVersion            = 3.0.11.RELEASE
+mustacheJavaVersion         = 0.9.7
 
 # testing dependencies
 junit4Version               = 4.13
