--- a/jbake-core/build.gradle
+++ b/jbake-core/build.gradle
@@ -26,6 +26,7 @@ dependencies {
     implementation "com.vladsch.flexmark:flexmark-profile-pegdown:$flexmarkVersion", optional
     implementation "org.jsoup:jsoup:$jsoupVersion"
     implementation "io.pebbletemplates:pebble:$pebbleVersion", optional
+    implementation "com.github.spullara.mustache.java:compiler:$mustacheJavaVersion", optional
 
     // cli specific dependencies
     implementation "org.eclipse.jetty:jetty-server:$jettyServerVersion", optional
